# fastapi-scaffolding

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py
src/app/: __init__.py  config.py  main.py
src/app/controllers/: __init__.py  example.py
src/app/routes/: __init__.py  healthcheck.py
src/app/schemas/: __init__.py  example_schemas.py
